add: queue to handle emails add: connection to redis add: send email when delivery is create and when delivery is canceled add: layout to emails

--- a/src/app/views/emails/cancelation.hbs
+++ b/src/app/views/emails/cancelation.hbs
@@ -1,11 +1,8 @@
-<strong> Olá, {{provider}}</strong>
-<p>Houve um cancelamento de horário, confira os detalhes abaixo:</p>
+<strong> Olá, {{deliverymanName}}</strong>
+<p>Sua entrega foi cancelada confira os detalhes abaixo:</p>
 <p>
-    <strong>Cliente: </strong>{{user}} <br/>
-    <strong>Data/hora:</strong> {{date}} <br/>
-    <br/>
-    <small>
-        O horário está novamente disponível para novos agendamentos.
-    </small>
+        <strong>{{description}}</strong> <br/>
+    Sentimos informar, mas a entrega do produto  <strong>{{product}}  </strong> no endereço: {{street}} nº{{number}} - {{city}}- {{state}} <strong></strong>teve de ser cancelada.
+ <br/>
 
 </p>
